--- a/app/views/login.ejs
+++ b/app/views/login.ejs
@@ -1,170 +1,224 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="UTF-8">
+    <meta charset="UTF-8">
 
-<!-- If IE use the latest rendering engine -->
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- If IE use the latest rendering engine -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-<!-- Set the page to the width of the device and set the zoon level -->
-<meta name="viewport" content="width = device-width, initial-scale = 1">
-<title>Hotel Management System - Login</title>
-<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <!-- Set the page to the width of the device and set the zoon level -->
+    <meta name="viewport" content="width = device-width, initial-scale = 1">
+    <title>Hotel Management System - Login</title>
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
-<style>
-body, html {
-  height: 100%;
-}
+    <style>
+        /* ------------------------------------------- MAIN.CSS --------------------------------------------------------*/
+        body,
+        html {
+            height: 100%;
+        }
 
-.bg {
-    /* The image used */
-    background-image: url("images/hotel.jpg");
+        .row {
+            margin: 0px;
+        }
 
-    /* Full height */
-    height: 100%;
-    position: absolute;
-    width: 100%;
-    left: 0;
+        .container {
+            padding-right: 0px;
+            padding-left: 0px;
+        }
 
-    /* Center and scale the image nicely */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
+        .container-fluid {
+            padding: 0px;
+        }
 
-.centered-form{
-	margin-top: 150px;
-}
+        .glyphicon.glyphicon-home {
+            font-size: 20px;
+            color: rgba(189, 211, 21, 0.9);
+        }
 
-.centered-form .panel{
-	background: rgba(255, 255, 255, 0.8);
-	box-shadow: rgba(0, 0, 0, 0.3) 20px 20px 20px;
-}
+        .nav-tabs,
+        .nav-pills {
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            text-align: center;
+            height: 20%;
+            margin-bottom: 0;
+        }
 
-/* Adds borders for tabs */
-.tab-content {
-    border-left: 1px solid #ddd;
-    border-right: 1px solid #ddd;
-    border-bottom: 1px solid #ddd;
-    padding: 10px;
-}
+        .nav-tabs>li,
+        .nav-pills>li {
+            float: none;
+            display: inline-block;
+            *display: inline;
+            /* ie7 fix */
+            zoom: 1;
+            /* hasLayout ie7 trigger */
 
-.nav-tabs, .nav-pills {
-    text-align:center;
-    height: 20%;
-    margin-bottom: 0;
-}
+        }
 
-.nav-tabs > li, .nav-pills > li {
-    float:none;
-    display:inline-block;
-    *display:inline; /* ie7 fix */
-    zoom:1; /* hasLayout ie7 trigger */
+        /* Main menu options */
+        .nav>li>a {
+            padding-top: 20px;
+            padding-bottom: 20px;
+            color: whitesmoke;
+        }
 
-}
+        .nav>li>a:hover {
+            background-color: rgba(189, 211, 21, 0.9);
+        }
 
-.nav>li>a {
-    padding-top: 20px;
-    padding-bottom: 20px;
-    color:black;
-}
+        #header {
+            background-color: rgba(0, 0, 0, 0.9);
+            position: relative;
+            width: 100%;
+            left: 0;
+        }
 
-#home-navbar {
-    position: relative;
-    width: 100%;
-    left: 0;
-}
+        #login-btn {
+            margin-top: 12%;
+            display: inline-block;
+        }
 
-#link-registernow {
-    padding-top: 5px;
-    font-size: 15px;
-}
+        #profile-indicator {
+            padding-top: 10px;
+            text-align: center;
+        }
 
-#login-btn {
-    padding-top: 5px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    display:inline-block;
-    *display:inline; /* ie7 fix */
-    zoom:1; /* hasLayout ie7 trigger */
-}
+        /* ------------------------------------------- MAIN.CSS --------------------------------------------------------*/
 
-</style>
+        /* Make grid visible */
+      /* div[class="container"] {
+         outline: 4px dotted rgba(0, 0, 0, 1);
+         background-color: rgb(100, 0, 0, 0.2);
+      } */
+
+      /* div[class="row"] {
+         outline: 3px dotted rgb(234, 0, 255);
+      }
+
+      div[class^="col"] {
+         outline: 3px dotted rgb(189, 255, 6);
+      } */
+
+
+        .bg {
+            /* The image used */
+            background-image: url("https://danw.hotglue.me/?webdesign.head.14452090501");
+
+            /* Full height */
+            position: absolute;
+            height: 100%;
+            width: 100%;
+            left: 0;
+
+            margin: 0px;
+            padding: 0px;
+
+            /* Center and scale the image nicely */
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+
+        .centered-form {
+            margin-top: 150px;
+        }
+
+        .centered-form .panel {
+            background: rgba(255, 255, 255, 0.8);
+            box-shadow: rgba(0, 0, 0, 0.3) 20px 20px 20px;
+        }
+
+        #link-registernow {
+            padding-top: 5px;
+            font-size: 15px;
+        }
+    </style>
 
 </head>
+
 <body>
-<div class="container bg">
+    <div class="container bg">
 
-    <!-- Navigation Bar -->
-    <div class="container-fluid">
-        <div class="row" id="home-navbar">
-        
-            <!-- Use nav-pills, nav-tabs. To center tabs add nav-justified to the class for ul -->
-            <ul class="nav nav-pills">
-                
-                <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-3">
-                    <% if(userData != 'undefined' && userType != 'client') { %>
-                    <li class="text-center"><a href="../staff/schedule">SCHEDULE</a></li>
-                    <% } else { %>
-                    <li class="text-center"><a href="/">HOME</a></li>
-                    <% } %>
-                </div>
+        <!-- Navigation Bar -->
+        <div class="container-fluid">
+            <div class="row" id="header">
 
-                <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-4">
-                    <li class="text-center"><a href="../rooms/accommodation">ACCOMMODATION</a></li>
-                </div>
+                <!-- Use nav-pills, nav-tabs. To center tabs add nav-justified to the class for ul -->
+                <ul class="nav nav-pills">
 
-                <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-3">
-                    <li class="text-center"><a href="../rooms/pricing">PRICING</a></li>
-                </div>
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 nav nav-pills">
+                        <% if(userData != 'undefined' && userType != 'client') { %>
+                        <li class="text-center"><a href="../staff/schedule">SCHEDULE</a></li>
+                        <% } else { %>
+                        <li class="text-center"><a href="/">HOME</a></li>
+                        <% } %>
+                    </div>
 
-                <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-2">
-                    <a href="login"><button type="submit" class="btn btn-danger" role="button" id="login-btn">LOGIN</button></a>
-                </div>
-            </ul>
-            
-        </div> <!-- home-navbar -->
-    </div> <!-- container-fluid // END OF TOP NAV BAR // -->
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-4 nav nav-pills">
+                        <li class="text-center"><a href="../rooms/accommodation">ACCOMMODATION</a></li>
+                    </div>
 
-    <div class="container">
-        <div class="row centered-form">
-        <div class="col-lg-4 col-md-4 col-sm-8 col-xs-12 col-sm-offset-2 col-md-offset-4">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                        <h3 class="panel-title">Login <small>book your room now!</small></h3>
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 nav nav-pills">
+                        <li class="text-center"><a href="../rooms/pricing">PRICING</a></li>
+                    </div>
+
+                    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 nav nav-pills">
+
+                    </div>
+
+                    <div class="col-lg-1 col-md-1 col-sm-1 col-xs-2 nav nav-pills">
+                        <a href="login"></a><button type="submit" class="btn btn-danger" role="button"
+                                id="login-btn">LOGIN</button>
+                    </div>
+                </ul>
+
+            </div> <!-- home-navbar -->
+        </div> <!-- container-fluid // END OF TOP NAV BAR // -->
+
+        <div class="container">
+            <div class="row centered-form">
+                <div class="col-lg-4 col-md-4 col-sm-8 col-xs-12 col-sm-offset-2 col-md-offset-4">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h3 class="panel-title">Login <small>book your room now!</small></h3>
                         </div>
                         <div class="panel-body">
-                        <% include ./partials/messages %>
-                        <form role="form" action="/users/login" method="POST">
+                            <% include ./partials/messages %>
+                            <form role="form" action="/users/login" method="POST">
 
-                            <div class="form-group">
-                                <input type="username" name="username" id="username" class="form-control input-sm" placeholder="Username">
-                            </div>
+                                <div class="form-group">
+                                    <input type="username" name="username" id="username" class="form-control input-sm"
+                                        placeholder="Username">
+                                </div>
 
-                            <div class="row">
-                                <div class="col-xs-12 col-sm-12 col-md-12">
-                                    <div class="form-group">
-                                        <input type="password" name="password" id="password" class="form-control input-sm" placeholder="Password">
+                                <div class="row">
+                                    <div class="col-xs-12 col-sm-12 col-md-12">
+                                        <div class="form-group">
+                                            <input type="password" name="password" id="password"
+                                                class="form-control input-sm" placeholder="Password">
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            
-                            <input type="submit" value="Login" class="btn btn-info btn-block">
-                            
-                            <div class="row">
-                                <div class="text-center" id="link-registernow"><a href="register">You don't have an account yet? Register NOW.</a></div>
-                            </div>
-                        
-                        </form>
+
+                                <input type="submit" value="Login" class="btn btn-info btn-block">
+
+                                <div class="row">
+                                    <div class="text-center" id="link-registernow"><a href="register">You don't have an
+                                            account yet? Register NOW.</a></div>
+                                </div>
+
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+
     </div>
 
-</div>
 
-
-<script src="https://ajax.googleapis.com/ajax/libs/d3js/5.12.0/d3.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/d3js/5.12.0/d3.min.js"></script>
 </body>
+
 </html>
